Regresión logística e introducción Matplotlib

--- a/logistic.ipynb
+++ b/logistic.ipynb
@@ -302,7 +302,7 @@
     "        print(\"El animal es un Reptil\")\n",
     "\n",
     "# Llamar a la función para predecir la clase de un animal\n",
-    "predecir_animal()\n"
+    "#predecir_animal()\n"
    ]
   },
   {
